# merka-vault

./: .envrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yaml  kind.sh  migration_summary.md  vaults.db
.github/workflows/: ci.yml  publish.yml
config/: sub-vault.hcl  vault.hcl
docs/: auto_unseal.md  database.md  examples.md  operations_overview.md  pki.md  testing.md
examples/: README.md  api.rs  api_proxy.rs  test_client.rs  web_server.rs
nix/modules/: devshell.nix  rust.nix
src/: actor.rs  api.rs  cli.rs  database.rs  interface.rs  lib.rs  main.rs  public.rs  server.rs  vault.rs
src/db/: db.rs
src/vault/: auth.rs  autounseal.rs  client.rs  common.rs  error.rs  init.rs  mod.rs  operations.rs  pki.rs  seal.rs  setup.rs  setup_root.rs  setup_sub.rs  status.rs  test_utils.rs  transit.rs  wizard.rs
tests/: README.md  actor_integration.rs  common.rs  database_utils.rs  e2e.rs.bak  example_test.rs  integration.rs  test_actor.rs  test_actor_integration.rs  test_integration.rs  test_utils.rs  test_vault_setup.rs  vault_monitoring_tests.rs
tests/common/: actor_utils.rs  mod.rs
