[package]
name = "merka-vault"
version = "0.1.0"
edition = "2021"
description = "Vault provisioning and management crate integrating with merka-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmicrocks/merka-vault"
documentation = "https://docs.rs/merka-vault"
keywords = ["vault", "pki", "hashicorp-vault", "merka", "cli"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
clap = { version = "4.5.30", features = ["derive", "env"] }
openssl = "0.10.71"
reqwest = { version = "0.12.12", features = ["json"] }
futures-util = "0.3.31"
anyhow = "1.0.96"
once_cell = "1.20.3"
rustify = "0.6.1"
tempfile = "3.17.1"
async-trait = "0.1.86"


[dev-dependencies]
tokio-test = "0.4.4"
testcontainers = "0.23.3"
lazy_static = "1.5.0"
env_logger = "0.11.6"

[dependencies.actix-web]
version = "4.9.0"

[[example]]
name = "api"
path = "examples/api.rs"
