[package]
name = "merka-vault"
version = "0.1.0"
edition = "2021"
description = "Vault provisioning and management crate integrating with merka-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmicrocks/merka-vault"
documentation = "https://docs.rs/merka-vault"
keywords = ["vault", "pki", "hashicorp-vault", "merka", "cli"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = { version = "4.5.32", features = ["derive", "env"] }
openssl = "0.10.71"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
futures-util = "0.3.31"
anyhow = "1.0.97"
once_cell = "1.21.1"
rustify = "0.6.1"
tempfile = "3.18.0"
async-trait = "0.1.87"
log = "0.4.26"

tracing = "0.1.41"
scopeguard = "1.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"


[dev-dependencies]
tokio-test = "0.4.4"
testcontainers = "0.23.3"
lazy_static = "1.5.0"
env_logger = "0.11.7"
cargo-husky = "1.5.0"

[dependencies.actix-web]
version = "4.10.2"

[dependencies.ring]
version = "0.17.14"
