[package]
name = "merka-vault"
version = "0.3.2"
edition = "2021"
description = "Vault provisioning and management crate integrating with merka-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmicrocks/merka-vault"
documentation = "https://docs.rs/merka-vault"
keywords = ["vault", "pki", "hashicorp-vault", "merka", "cli"]
categories = ["api-bindings", "command-line-utilities"]

# Define features for the crate
[features]
# Default features when nothing is specified
default = []
# Features for testing utilities
testing = []
# Feature for full API (includes all functions even if not used in main code)
full-api = []

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = { version = "4.5.34", features = ["derive", "env"] }
openssl = "0.10.71"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
futures-util = "0.3.31"
anyhow = "1.0.97"
once_cell = "1.21.2"
rustify = "0.6.1"
tempfile = "3.19.1"
async-trait = "0.1.88"
log = "0.4.27"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
base64 = "0.22.1"
env_logger = "0.11.7"

# SQLite dependencies
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"

# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.28.1"
dialoguer = "0.11.0"  # For interactive prompts
indicatif = "0.17.11" # For progress indicators

tracing = "0.1.41"
scopeguard = "1.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"

# Web server and Socket.IO dependencies
actix-web = "4.10.2"
socketioxide = "0.16.2"
tokio-stream = { version = "0.1.17", features = ["sync"] }
actix-cors = "0.7.1"

[dev-dependencies]
tokio-test = "0.4.4"
lazy_static = "1.5.0"
env_logger = "0.11.7"
cargo-husky = "1.5.0"
ctor = "0.4.1"
rust_socketio = "0.6.0"
uuid = { version = "1.16.0", features = ["v4"] }
base64 = "0.22.1"
serial_test = "3.2.0"
testcontainers = "0.23.3"

[dependencies.ring]
version = "0.17.14"
